--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 #title {
     width: 306px;
     height: 61px;
@@ -101,6 +104,7 @@ table{
 }
 #comment{
     text-align: center;
+
 }
 #form{
     margin: 10px 150px;
@@ -111,7 +115,7 @@ table{
 footer{
     padding: 50px;
     text-align: center;
-    width: 1430px;
+    width: 1500px;
     height:10px;
     margin-top:10px;
     background-color: #109E97;
@@ -124,7 +128,7 @@ footer{
    margin: 10px 300px 10px 6px;
 }
 #right{
-margin: 10px 10px 10px 270px;
+margin: 10px 10px 10px 110px;
 }
 
 .flex{
@@ -133,6 +137,9 @@ margin: 10px 10px 10px 270px;
 }
 #name{
     text-align: center;
+}
+#name1{
+    right: 30px;
 }
 #read{
     width: 200px;
